@@ -154,3 +154,5 @@ REL1_10_8: (released ...)
 - Added some documentation files
 - PageFunctions: added 'varaset', 'varaget' magic words
 - PageFunctions: added 'PageVarGet' hook
+- Added 'RegexTools' extension
+- 
